syntax = "proto3";

option go_package="./;distribute_prover";

package distribute_prover;

service DistributeProver {
  rpc GenerateWindowPoSt (GenerateWindowPoStRequest) returns (GenerateWindowPoStReply) {

  }

  rpc Ping (PingRequest) returns (PingReply) {

  }
}

message PingRequest {

}

message PingReply {
  string msg = 1;
}

message GenerateWindowPoStRequest {
  uint64 actorId = 1;
  bytes sinfos = 2;
  bytes randomness = 3;
}

message GenerateWindowPoStReply {
  bytes proof = 1;
  bytes skipped = 2;
}

